sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Sum_of_Waste_Day_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Waste_Day_OPEN__c</fullName>
    <description>Summary of waste data for days that the toilet is open (all days that waste weights are greater than 0)</description>
    <label>Sum of Waste/ Day - OPEN</label>
    <summarizedField>Collection_Data__c.Total_Waste_kg_day__c</summarizedField>
    <summaryFilterItems>
        <field>Collection_Data__c.Total_Waste_kg_day__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Collection_Data__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Waste Data</value>
    </summaryFilterItems>
    <summaryForeignKey>Collection_Data__c.Toilet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>