sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/SUM_of_Waste_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>SUM_of_Waste_This_Quarter__c</fullName>
    <description>Sums Waste collected this quarter</description>
    <label>SUM of Waste - This Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>