sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Sum_Waste_Day_THIS_QUARTER__c.field-meta.xml
<CustomField>
    <fullName>Sum_Waste_Day_THIS_QUARTER__c</fullName>
    <description>Sums the waste from this quarter</description>
    <label>Sum of Waste/ Day - THIS QUARTER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>