sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Summary_Waste_Day__c.field-meta.xml
<CustomField>
    <fullName>Summary_Waste_Day__c</fullName>
    <label>Sum of Waste/Day</label>
    <summarizedField>Collection_Data__c.Total_Waste_kg_day__c</summarizedField>
    <summaryFilterItems>
        <field>Collection_Data__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Waste Data</value>
    </summaryFilterItems>
    <summaryForeignKey>Collection_Data__c.Toilet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>