sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Superstructure_Type__c.field-meta.xml
<CustomField>
    <fullName>Superstructure_Type__c</fullName>
    <inlineHelpText>Please select the superstructure type for this toilet.</inlineHelpText>
    <label>Superstructure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V3 (Walls + Tiled Floor + Door + Door jam)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>