sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Toilets</relationshipLabel>
    <relationshipName>Toilets</relationshipName>
    <type>Lookup</type>
</CustomField>