sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Toilet_Gender_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Gender_Requirement__c</fullName>
    <label>Toilet Gender Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>