sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Toilet_Reopening_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Reopening_Due_Date__c</fullName>
    <label>Toilet Reopening Due Date</label>
    <type>Date</type>
</CustomField>