sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Toilet_Up_structure__c.field-meta.xml
<CustomField>
    <fullName>Toilet_Up_structure__c</fullName>
    <label>Toilet Up-structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>