sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Urine__c.field-meta.xml
<CustomField>
    <fullName>Urine__c</fullName>
    <label>Urine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>