sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Urine_Collection_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Urine_Collection_Container_Type__c</fullName>
    <label>Urine Collection Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>25L</fullName>
                <default>true</default>
                <label>25L</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>