sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Users_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Users_Last_Week__c</fullName>
    <description>The number of users last week.</description>
    <label>Users Last Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>