sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Users_Three_Weeks_Ago__c.field-meta.xml
<CustomField>
    <fullName>Users_Three_Weeks_Ago__c</fullName>
    <label>Users Three Weeks Ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>