sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Waste_Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Waste_Container_Type__c</fullName>
    <inlineHelpText>Please select the type of feces waste collection container type currently in use</inlineHelpText>
    <label>Feces Collection Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>35L</fullName>
            </value>
            <value>
                <fullName>40L</fullName>
                <default>true</default>
                <label>40L</label>
            </value>
            <value>
                <fullName>45L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>