sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Waste_Data_Records__c.field-meta.xml
<CustomField>
    <fullName>Waste_Data_Records__c</fullName>
    <label>Waste Data Records</label>
    <summaryFilterItems>
        <field>Collection_Data__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Waste Data</value>
    </summaryFilterItems>
    <summaryForeignKey>Collection_Data__c.Toilet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>