sfSandBoxCode/force-app/main/default/objects/Toilet__c/fields/Waste_Data_Records_OPEN__c.field-meta.xml
<CustomField>
    <fullName>Waste_Data_Records_OPEN__c</fullName>
    <description>Count of Waste Data Records for days that the toilet is open (total waste is greater than 0).</description>
    <label>Waste Data Records - OPEN</label>
    <summaryFilterItems>
        <field>Collection_Data__c.Total_Waste_kg_day__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Collection_Data__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Waste Data</value>
    </summaryFilterItems>
    <summaryForeignKey>Collection_Data__c.Toilet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>