sfSandBoxCode/force-app/main/default/objects/Toilet__c/recordTypes/Extra_Container.recordType-meta.xml
<RecordType>
    <fullName>Extra_Container</fullName>
    <active>true</active>
    <label>Extra Container</label>
</RecordType>