sfSandBoxCode/force-app/main/default/objects/Toilet__c/recordTypes/Sanergy.recordType-meta.xml
<RecordType>
    <fullName>Sanergy</fullName>
    <active>true</active>
    <description>Sanergy Toilet</description>
    <label>Sanergy</label>
</RecordType>