sfSandBoxCode/force-app/main/default/objects/Toilet__c/validationRules/Check_if_Duplicate_Toilet_Exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_if_Duplicate_Toilet_Exists</fullName>
    <active>false</active>
    <errorConditionFormula>VLOOKUP($ObjectType.Toilet__c.Fields.Name, 
$ObjectType.Toilet__c.Fields.Name , Name ) = Name</errorConditionFormula>
    <errorMessage>The toilet name already exists</errorMessage>
</ValidationRule>