sfSandBoxCode/force-app/main/default/objects/Toilet__c/validationRules/EnsureAtLeastOneReasonOnClosure.validationRule-meta.xml
<ValidationRule>
    <fullName>EnsureAtLeastOneReasonOnClosure</fullName>
    <active>true</active>
    <description>Ensures that the user gives atleast one reason for closure incase flt is closed.</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Operational_Status__c, &#39;Closed&#39;),
 ISBLANK(TEXT( Reason_1__c )),
 ISBLANK(TEXT( Reason_2__c )),
 ISBLANK(TEXT( Reason_3__c ))
)</errorConditionFormula>
    <errorDisplayField>Reason_1__c</errorDisplayField>
    <errorMessage>Please Select atleast one reason for closure</errorMessage>
</ValidationRule>