sfSandBoxCode/force-app/main/default/objects/Toilet__c/validationRules/Required_Collection_Route.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Collection_Route</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Collection_Route__c,&quot;&quot; ),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Collection_Route__c</errorDisplayField>
    <errorMessage>Please fill in collection route</errorMessage>
</ValidationRule>