sfSandBoxCode/force-app/main/default/objects/Toilet__c/validationRules/Toilet_Current_Specific_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Toilet_Current_Specific_Status_Required</fullName>
    <active>true</active>
    <description>The Current Specific Status of the FLT is required</description>
    <errorConditionFormula>AND( ISBLANK(TEXT(Current_Specific_Status__c )))</errorConditionFormula>
    <errorDisplayField>Current_Specific_Status__c</errorDisplayField>
    <errorMessage>The Current Specific Status of the FLT is required</errorMessage>
</ValidationRule>