sfSandBoxCode/force-app/main/default/objects/Toilet__c/validationRules/Toilet_Name_Does_not_Match_Location_Tag.validationRule-meta.xml
<ValidationRule>
    <fullName>Toilet_Name_Does_not_Match_Location_Tag</fullName>
    <active>true</active>
    <description>Check whether the Toilet Name matches the Location Name</description>
    <errorConditionFormula>NOT (CONTAINS ( Name , Location__r.Name))</errorConditionFormula>
    <errorMessage>The Toilet Name does not match with the Location Name</errorMessage>
</ValidationRule>