sfSandBoxCode/force-app/main/default/objects/Toilet__c/validationRules/Validate_Toilet_Name_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Toilet_Name_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( CONTAINS( Name , &quot;.&quot;) )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Kindly ensure that the toilet name format is (xx-n.n) e.g. KR-1.1</errorMessage>
</ValidationRule>