sfSandBoxCode/force-app/main/default/objects/Toilet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operational_Status__c</columns>
    <columns>SubArea__c</columns>
    <columns>Area__c</columns>
    <columns>Operator__c</columns>
    <columns>Opening_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>