sfSandBoxCode/force-app/main/default/objects/Toilet__c/listViews/Sanergy_Toilets.listView-meta.xml
<ListView>
    <fullName>Sanergy_Toilets</fullName>
    <columns>NAME</columns>
    <columns>Sub_Area__c</columns>
    <columns>Operator__c</columns>
    <columns>Opening_Date__c</columns>
    <columns>GPS__c</columns>
    <columns>GPS_Longitute__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Toilet__c.Sanergy</value>
    </filters>
    <label>Sanergy Toilets</label>
    <language>en_US</language>
</ListView>